Fix: header and footer logo alignment

--- a/app/static/styles/base/base.css
+++ b/app/static/styles/base/base.css
@@ -26,6 +26,7 @@ textarea {
 
 body {
   font-family: var(--font-base);
+  font-size: 16px;
   min-height: 100vh;
   margin: 3.5rem 0 0 0;
   background-color: var(--body-bg-clr);
@@ -47,7 +48,6 @@ body {
   top: 0;
   background-color: var(--purple-dark);
   align-items: center;
-  height: 3rem;
   z-index: 10;
 }
 
@@ -63,20 +63,33 @@ h2{
 /* Mobile-first design - minimum 300px screen width */
 .nav__top {
   display: flex;
+  justify-content: center;
   background-color: var(--purple-dark);
   color: white;
   width: 100%;
   height: 3.5rem;
   text-align: center;
-  align-items: center;
   font-size: 0.8rem;
   overflow: visible;
   padding: 0.3rem;
+  position: relative;
+}
+
+.nav__logo {
+    display: flex;
+    align-items: center;
+}
+
+.nav__logo img,
+.footer__logo img {
+  width: 102px;
 }
 
 .nav__menu {
   position: absolute;
   right: 0;
+  top: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -97,13 +110,6 @@ h2{
   height: 2.5rem;
   margin: 0 0.5rem;
   position: relative;
-}
-
-.nav__logo {
-  height: 2.5rem;
-  position: absolute;
-  top: 0.5rem;
-  left: 1.5rem;
 }
 
 #nav__dropdown {
@@ -157,6 +163,13 @@ footer {
   margin-top: auto;
 }
 
+.footer__top {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 50px;
+}
+
 .footer__register {
   background-color: white;
   border: 3px var(--purple-outline) solid;
@@ -200,8 +213,7 @@ footer {
 }
 
 .footer__logo {
-  height: 2rem;
-  margin: 0 1rem -0.8rem 1rem;
+    display: inline-block;
 }
 
 .footer__totop--button {
@@ -245,8 +257,6 @@ address a {
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
   .nav__logo {
-    position: relative;
-    top: 0;
-    left: 0;
+    
   }
 }
